--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,22 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 jobs:
-    docker:
-          - image: "python:3.6.1"
-    
-    steps:
-        - checkout
-                
-        - run:
-            name: install dependencies
-            command: |
-                python3 -m venv venv
-                . venv/bin/activate
-                make install 
+    build_circleCI:
+        docker:
+              - image: "python:3.6.1"
         
-        - run:
-            name: Run lint
-            command: |
-                . venv/bin/activate
-                make lint
+        steps:
+            - checkout
+                    
+            - run:
+                name: install dependencies
+                command: |
+                    python3 -m venv venv
+                    . venv/bin/activate
+                    make install 
+            
+            - run:
+                name: Run lint
+                command: |
+                    . venv/bin/activate
+                    make lint
